# testing_servis

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
authapp/: admin.py  models.py  urls.py  views.py
authapp/migrations/: 0001_initial.py
authapp/templates/authapp/: login.html  logout.html  profile.html  register.html
core/: settings.py  settings_local.py  urls.py
docker/nginx/: nginx.conf
testapp/: admin.py  forms.py  models.py  urls.py  views.py
testapp/migrations/: 0001_initial.py
testapp/templates/testapp/: base.html  home.html  question_detail.html  result.html
