[tool.poetry]
name = "testing_service"
version = "0.1.0"
description = ""
authors = ["RomanL91 <dev_roman91@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.4"
django-crispy-forms = "^1.14.0"
django-json-widget = "^1.1.1"
South = "^1.0.2"
gunicorn = "^20.1.0"
isort = "^5.11.4"
black = "^22.12.0"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
